    + [NT] Do not check for missing uploader address as it cannot be
      done reliably anymore.
  * lib/Lintian/Collect/{Binary,Source}.pm:
    + [NT] Assume packages to be non-native when it cannot be
      accurately determined due to missing version field.
  * lib/Lintian/Collect/Binary.pm:
    + [NT] Fixed an error in parsing symbol names when using readelf
      as replacement for objdump.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Removed assumption that source packages always have a
      format field.
  * lib/Lintian/Lab.pm:
    + [NT] Added "is_temp" method to identify temp labs from static
      labs.
  * lib/Lintian/Lab/Entry.pm:
    + [NT] Properly strip whitespace when loading collection status.
  * lib/Lintian/Processable/Package.pm:
    + [NT] Use part of the file name as package name if the mandatory
      "Package" or "Source" fields are missing rather than choking.

  * reporting/harness:
    + [NT] Removed useless "TODO" message from the log output.
  * reporting/html_reports:
    + [JW] Properly handle uploader names with commas.

 -- Niels Thykier <niels@thykier.net>  Tue, 29 Nov 2011 18:42:37 +0100

lintian (2.5.4) unstable; urgency=medium

  The "perl5.14 (+ misc) fix"-upload.  Medium as perl 5.14
  deprecation warnings tend to make Lintian output unreadable.

  * Summary of tag changes:
    + Added:
      - data.tar.xz-member-without-dpkg-pre-depends
      - gzip-file-is-not-multi-arch-same-safe
      - init.d-script-does-not-implement-optional-option
      - init.d-script-missing-lsb-description
      - maintainer-address-causes-mail-loops-or-bounces
      - missing-build-dependency-for-dh-addon
      - package-depends-on-lower-priority-package
      - package-would-benefit-from-build-arch-targets
      - python-depends-but-no-python-helper
      - python3-depends-but-no-python3-helper
      - transitional-package-should-be-oldlibs-extra
      - uploader-address-causes-mail-loops-or-bounces

  * checks/*: